--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="PlaceholderDate">20 April 2012, 20:08 PM</string>
     <string name="PlaceholderWeather">Clear Sky</string>
     <string name="Placeholder_TileValue">06:40 AM</string>
+    <string name="Placeholder_MinValues">Min: 05:05 AM</string>
+    <string name="Placeholder_CurrentDay">Monday - Today</string>
     <string name="sunrise">Sunrise</string>
     <string name="sunset">Sunset</string>
     <string name="wind">Wind</string>
