--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
     <string name="app_name">Weather App</string>
     <string name="PlaceholderDate">20 April 2012, 20:08 PM</string>
     <string name="PlaceholderWeather">Clear Sky</string>
-    <string name="Placeholder_TileValue">06:40 AM</string>
+    <string name="Placeholder_HourValue">06:40</string>
     <string name="Placeholder_MinValues">Min: 05:05 AM</string>
+    <string name="Placeholder_Temperature">00.0º</string>
     <string name="Placeholder_CurrentDay">Monday - Today</string>
     <string name="sunrise">Sunrise</string>
     <string name="sunset">Sunset</string>
@@ -17,4 +18,10 @@
 
     <string name="LocationError_Permission">Permission not granted</string>
     <string name="Location_PermissionDeniedRationale">This app need permission to access your current to properly work</string>
+    <string name="CurrentWeatherIcon">Current Weather Icon</string>
+    <string name="reload_button">Reload Button</string>
+
+    <string name="hourTempC">%1$.1f Cº</string>
+    <string name="dayTempC">%1$.1f Cº</string>
+    <string name="lastUpdated">Last Updated At: %1$s</string>
 </resources>
