--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="hourTempC">%1$.1f Cº</string>
     <string name="dayTempC">%1$.1f Cº</string>
     <string name="lastUpdated">Last Updated At: %1$s</string>
+    <string name="dayOfWeek">%1$s - Today</string>
 </resources>
